<resources>
    <string name="app_name">RandomUserApp</string>
    <string name="app_bar_title">Users list</string>
    <string name="user_photo">User\'s photo</string>
    <string name="error_message">Something went wrong.\nPlease try again later.</string>
    <string name="try_again">Try again</string>
    <string name="error_icon">Error icon</string>
    <string name="phone_number">Phone number:</string>
    <string name="e_mail">E-mail:</string>
    <string name="location">Location:</string>
    <string name="timezone">Timezone:</string>
    <string name="date_if_birth">Date of birth:</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="user_location">%1$s, %2$s, %3$s, %4$d</string>
    <string name="date_of_birth">%1$d %2$s %3$d</string>
    <string name="content_description">Content description</string>
</resources>