<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userdetails.UserDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/app_name"
            app:titleCentered="true" />

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/app_name"-->
        <!--            android:textSize="20sp"-->
        <!--            android:textStyle="bold" />-->

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/userDetails_layout"
        layout="@layout/item_user_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <!--    <ImageView-->
    <!--        android:id="@+id/photo_imageView"-->
    <!--        android:layout_width="240dp"-->
    <!--        android:layout_height="240dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"-->
    <!--        tools:src="@tools:sample/avatars" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="24sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/photo_imageView"-->
    <!--        tools:text="Sandra Ray" />-->

    <!--    <View-->
    <!--        android:id="@+id/dividerView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:background="?android:attr/listDivider"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/phone_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/phone_number"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline2"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/dividerView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/phoneValue_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/phone_textView"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/phone_textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/phone_textView"-->
    <!--        tools:text="(927) 791-8752" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/email_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="@string/e_mail"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/phone_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/phone_textView"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/phone_textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/emailValue_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/email_textView"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/phoneValue_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/phoneValue_textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/email_textView"-->
    <!--        tools:text="sandra.ray@example.com" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/address_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="@string/location"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/email_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/email_textView"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/email_textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/addressValue_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/address_textView"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/emailValue_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/emailValue_textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/address_textView"-->
    <!--        tools:text="2155 Taylor St" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/dob_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="@string/timezone"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/address_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/address_textView"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/address_textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/dobValue_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/dob_textView"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/addressValue_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/addressValue_textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/dob_textView"-->
    <!--        tools:text="Adelaide, Darwin" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/timezone_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:text="@string/date_if_birth"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/dob_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/dob_textView"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/dob_textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/timezoneValue_textView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/timezone_textView"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/dobValue_textView"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/dobValue_textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/timezone_textView"-->
    <!--        tools:text="03.06.1987" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintGuide_begin="144dp" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/error_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/error_icon"
        android:src="@drawable/ic_error"
        app:layout_constraintBottom_toTopOf="@+id/error_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tryAgain_button"
        app:layout_constraintEnd_toEndOf="@+id/error_imageView"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/error_imageView"
        app:layout_constraintTop_toBottomOf="@+id/error_imageView" />

    <Button
        android:id="@+id/tryAgain_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/error_textView"
        app:layout_constraintStart_toStartOf="@+id/error_textView"
        app:layout_constraintTop_toBottomOf="@+id/error_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>